--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
+  line-height: 1.5;
 }
 
 html,
@@ -9,4 +10,47 @@ body {
   padding: 0;
 }
 
-/* Add styles here! */
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+header {
+  padding-top: 64px;
+  padding-bottom: 32px;
+}
+
+main {
+  background-color: hsla(0deg, 0%, 60%);
+}
+
+.max-width-wrapper {
+  width: 100%;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.intro-chunk, .card {
+  padding: 16px;
+}
+
+main {
+  border-top: 8px solid hsla(0deg, 0%, 40%);
+  border-bottom: 1px solid transparent;
+}
+
+.card {
+  border-bottom: 8px solid hsla(0deg, 0%, 40%);
+  margin-top: 64px;
+  margin-bottom: 64px;
+  background-color: white;
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  width: max-content;
+  padding: 8px 24px;
+  margin-top: -8px;
+  margin-left: -24px;
+}
